RawkSD PC Updates Better handling of folder opens, and arks Solos added to import data Automatic generation of weights and pan (broken atm; auto-plays talkies for you) RB2 360 DLC Exporting Preferences dialog Failed attempt at generating proper MOGG headers As usual, a bunch of other stuff I forgot to mention.
git-svn-id: svn://japaneatahand.com/rawksd/trunk@116 336e800a-23d8-41f8-b78d-e9b071a98a33

--- a/consolehaxx/ConsoleHaxx.Xbox360/Properties/Resources.resx
+++ b/consolehaxx/ConsoleHaxx.Xbox360/Properties/Resources.resx
@@ -117,20 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="rawksd_000bin" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\rawksd_000bin;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="XK3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\XK3.bin;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="rawksd_albumart" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\rawksd_albumart;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="rawksd_milo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\rawksd_milo;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="rawksd_savebanner" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\rawksd_savebanner;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="rawksd_tmd" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\rawksd_tmd;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="XK4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\XK4.bin;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
